--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "async": "^2.4.1",
     "chai": "^4.0.2",
     "husky": "^0.13.4",
     "supertest": "^3.0.0"
