--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "chance": "^1.0.4",
+    "cors": "^2.8.4",
     "express": "^4.14.0",
     "log4js": "^1.0.1",
     "moment": "^2.17.0",
